# filespeak-backend

./: Dockerfile  README.md  fly.toml  pyproject.toml
filespeak_backend/: chat.py  main.py  my_chromadb.py
filespeak_backend/routers/: documents.py  ui.py  upload.py
